@startuml
class twisk.vues.VueActiviteIG {
- HBox box
+ void reagir()
}
class twisk.vues.VueOutils {
- MondeIG monde
- Button boutonActivite
- Button boutonGuichet
- Button boutonSimulation
+ void reagir()
}
abstract class twisk.vues.VueEtapeIG {
# MondeIG monde
# EtapeIG etape
# Label label
+ void setMouse(MouseEvent)
}
class twisk.vues.VueMondeIG {
- MondeIG monde
+ void reagir()
}
class twisk.vues.VueGuichetIG {
- HBox box
+ void reagir()
}
class twisk.vues.VuePointDeControleIG {
- MondeIG monde
- PointDeControleIG pdc
+ void reagir()
}
class twisk.vues.VueMenu {
- MondeIG monde
- Menu fichier
- Menu edition
- Menu mondeMenu
- Menu parametres
- Menu style
+ void reagir()
+ void rename()
+ void delai()
+ void ecart()
+ void jetons()
}
class twisk.vues.VueArcIG {
- MondeIG monde
- ArcIG arc
- Line ligne
- Polyline triangle
+ void reagir()
+ void apparitionDeLaLigne(PointDeControleIG,PointDeControleIG)
+ void apparitionDuTriangle()
}


twisk.designPattern.Observateur <|.. twisk.vues.VueActiviteIG
twisk.vues.VueEtapeIG <|-- twisk.vues.VueActiviteIG
twisk.designPattern.Observateur <|.. twisk.vues.VueOutils
javafx.scene.layout.TilePane <|-- twisk.vues.VueOutils
twisk.designPattern.Observateur <|.. twisk.vues.VueEtapeIG
javafx.scene.layout.VBox <|-- twisk.vues.VueEtapeIG
twisk.designPattern.Observateur <|.. twisk.vues.VueMondeIG
javafx.scene.layout.Pane <|-- twisk.vues.VueMondeIG
twisk.designPattern.Observateur <|.. twisk.vues.VueGuichetIG
twisk.vues.VueEtapeIG <|-- twisk.vues.VueGuichetIG
twisk.designPattern.Observateur <|.. twisk.vues.VuePointDeControleIG
javafx.scene.shape.Circle <|-- twisk.vues.VuePointDeControleIG
twisk.designPattern.Observateur <|.. twisk.vues.VueMenu
twisk.vues.MenuBar <|-- twisk.vues.VueMenu
twisk.designPattern.Observateur <|.. twisk.vues.VueArcIG
javafx.scene.layout.Pane <|-- twisk.vues.VueArcIG
@enduml